syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

option go_package = "github.com/patyukin/banking-system/auth/pkg/user_v1;user_v1";

service UserV1 {
	// Create Role
	rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {
		option (google.api.http) = {
			post: "/api/v1/roles"
			body: "*"
		};
	}

	// Create User
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
		option (google.api.http) = {
			post: "/api/v1/users"
			body: "*"
		};
	}

	// Get One User
	rpc Get(GetRequest) returns (GetResponse) {
		option (google.api.http) = {
			get: "/api/v1/users/{id}"
			body: "*"
		};
	}

	// Update User
	rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			patch: "/api/v1/users/{id}"
			body: "*"
		};
	}

	// Delete User
	rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			delete: "/api/v1/users/{id}"
			body: "*"
		};
	}
}

message CreateRoleRequest {
	string role = 1;
}

message CreateRoleResponse {
	string id = 1;
}

message UserInfo {
	string name = 1;
	string email = 2;
}

message User {
	int64 id = 1;
	UserInfo info = 2;
	repeated string roles_uuid = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp updated_at = 5;
}

message UpdateUserInfo {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue email = 2;
}

message CreateUserRequest {
	UserInfo info = 1;
	string password = 2;
	string password_confirm = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp updated_at = 5;
}

message CreateUserResponse {
	int64 id = 1;
}

message GetRequest {
	int64 id = 1;
}

message GetResponse {
	User user = 1;
}

message ListRequest {
	int64 limit = 1;
	int64 offset = 2;
}

message UpdateRequest {
	int64 id = 1;
	UpdateUserInfo info = 2;
}

message DeleteRequest {
	int64 id = 1;
}

